<resources>
    <string name="app_name">InTouch</string>
    <string name="create_contact">Create contact</string>
    <string name="scan_card">Scan Business Card</string>
    <string name="remove_bc">Remove Current BC</string>
    <string name="open_asset">Open Asset Image</string>
    <string name="pick_card">Pick Business Card</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="title_activity_editor">EditorActivity</string>
    <string name="new_contact">New Contact</string>
    <string name="note_updated">Note updated</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="edit_note">Edit</string>
    <string name="action_share">Share contact</string>

    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_onboarding_pager">OnboardingPagerActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_label">InTouch</string>
    <string name="search_hint">Look for someone!</string>
    <string name="scan_barcode">Scan Barcode</string>
</resources>
