<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_scan_bc_card"
        android:orderInCategory="98"
        android:title="@string/scan_card"
        android:icon="@drawable/ic_camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_bc_picker"
        android:orderInCategory="99"
        android:title="@string/pick_card"
        android:icon="@drawable/ic_image_gallery"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_open_asset"
        android:orderInCategory="100"
        android:title="@string/open_asset"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_remove_bc"
        android:orderInCategory="101"
        android:title="@string/remove_bc"
        app:showAsAction="never" />




</menu>