<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_scan_bc_card"
        android:orderInCategory="100"
        android:title="@string/scan_card"
        android:icon="@drawable/ic_camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="101"
        android:title="@string/delete_contact"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

</menu>